# my_projects

./: .gitignore
net_port_data/: CMakeLists.txt  net_port_data_transfer.c  readme.txt
net_port_data/ini_parser/: ini_parser.c  ini_parser.h
net_port_data/network/: eth_server.c  eth_server.h  my_list.h
